repos/emily-python/contents/test/parser/fail/setInvalid.em
# Set something other than a symbol

# Arg: --ast2
# Expect failure

3 = 4